using Godot;
using System;

public interface IVerbosable 
{
    public string Verbose();
}
