@startuml
!theme reddress-darkgreen

class Home{
    + _Ready()
}
Home *..> TerritoryView : use

interface IVerbosable{
    + Verbose()
}

class Paths{
    + {static} {readonly} GDEXT = ".tscn";
    + {static} {readonly} PNGEXT = ".png";
    + {static} {readonly} SVGEXT = ".svg";
    + {static} {readonly} RESSOURCES = "Ressources/";
    + {static} {readonly} NODES = "Nodes/";
    + {static} {readonly} IMAGES = RESSOURCES + "Images/";
    + {static} {readonly} VIEW_NODES = NODES + "View/";
    + {static} {readonly} MODEL_NODES = NODES + "Model/";
    + {static} {readonly} CONTROLLER_NODES = NODES + "Controller/";
    + {static} {readonly} DEFAULT_TEXTURE = IMAGES + "icon" + SVGEXT;
}

enum CellKind{
    BUILDING,
    WASTELAND,
    PRIMARY
}

class CellModel implements ICellObservable {
    - cname : string
    - size : int
    - placement : Vector2I
    + CellModel()
    + CellModel(x : int, y : int)
    + CellModel(observer : ICellObserver, x : int, y : int)
    + GetCellSize() : int
    + SetCellSize(newCellSize : int)
    + SetCellName(newName : string)
    + GetCellName() : string
    + SetCellKind(newKind : CellKind)
    + GetCellKind() : CellKind
    + SetPlacement(x : int, y : int)
    + GetPlacement() : Vector2I
    + SetObserver(observer : ICellObserver)
    + GetObserver() : ICellObserver
    + SetSkinExtension(extension : string)
    + GetSkinExtension() : string
    + NotifyPlacement()
    + NotifyCellName()
}
CellKind <.. CellModel : use\n-kind
ICellObserver <.. CellModel : use\n-observe

class Grid implements IGridObservable {
    - size: int
    - observer: IGridObserver

    + Grid(size: int)
    + SetAt(cell: CellModel, line: int, column: int)
    + GetAt(line: int, column: int): CellModel
    + GetSize(): int
    + SetObserver(observer: IGridObserver)
    + Notify()
}
Grid *..> CellModel : organizes and controls\n- cells : CellModel[*]

interface IGridObserver {
    + UpdateMap(grid: Grid)
}

interface ICellObservable {
    + SetObserver(observer: ICellObserver)
    + NotifyPlacement()
    + NotifyCellName()
}

interface ICellObserver {
    + UpdatePlacement(coordinates: Vector2I)
    + UpdateCellName(cname: string)
}

interface IGridObserver {
    + UpdateMap(grid: Grid)
}

interface IGridObservable {
    + SetObserver(observer: IGridObserver)
    + Notify()
}

class CellView implements ICellObserver, IVerbosable {
    - _nicknameLabel: Label
    - _skin: Sprite2D
    # CellView()
    + _Ready() 
    + OnMouseOver() 
    + OnMouseExit() 
    + UpdatePlacement(coordinates: Vector2I) 
    + UpdateCellName(cname: string) 
    + ChangeSkin(skinName: string) 
    + {static} Create() : CellView
    + Verbose() : string
}

class TerritoryView implements IGridObserver {
    + _Ready() 
    + UpdateMap(grid: Grid)
    + {static} Create() : TerritoryView
}
TerritoryView ..> IGridObservable : > consult

class "<<static>> GridFactory" as GridFactory{
    + {static} CreatePrimaryLand(size : int)
    + {static} CreateNoMansLand(size : int)
}
Grid <..o GridFactory

class "<<static>> CellsFactory" as CellsFactory{
    + {static} CreatePrimaryCell(x : int, y : int) : CellModel
    + {static} DesignPrimaryCell(parent : Node, model : CellModel) : CellView
    + {static} CreateGrass(x : int, y : int) : CellModel
    + {static} DesignGrass(parent : Node, model : CellModel) : CellView
}
CellModel <..o CellsFactory
CellView <..o CellsFactory

class BuildingModel {
    - MULTIPLICATION_RATE : Dictionary<InfluenceScale, int>
    - observers : List<IBuildingObserver>
    - impacts : int[3]
    - needs : Dictionary<FlowKind, int>
    - products : Dictionary<FlowKind, int>
    - parts : List<CellModel>
    - actualInfluenceScale : InfluenceScale
    + BuildingModel(name: string, parts: List<CellModel>, influence: InfluenceScale, needs: Dictionary<FlowKind, int>, products: Dictionary<FlowKind, int>)
    + SetComposition(parts: ICollection<CellModel>)
    + NotifyComposition()
    + GetComposition() : CellModel[]
    + SetProduction(products: IDictionary<FlowKind, int>)
    + NotifyProducts()
    + GetFlowsProduction() : FlowKind[]
    + GetQuantityProducedOf(kind: FlowKind) : int
    + SetNeeds(needs: IDictionary<FlowKind, int>)
    + NotifyNeeds()
    + GetQuantityNeeded(kind: FlowKind) : int
    + GetFlowsNeeded() : FlowKind[]
    + SetInfluence(influence: InfluenceScale)
    + NotifyInfluence()
    + GetInfluence() : InfluenceScale
    + SetImpacts(impacts: ICollection<int>)
    + GetImpacts() : int[]
    + NotifyImpacts()
    + AddObserver(observer: IBuildingObserver)
    + RemoveObserver(observer: IBuildingObserver)
    + NotifyAlls()
}
BuildingModel *..> CellModel : composed of\n-parts : Cell[*]
note "needs and flows = {FlowKind:Quantity}\nImpacts = sociabilty, economy, ecology" as FQNote
FQNote - BuildingModel

interface IBuildingObservable  {
    + RegisterBuildingObserver(observer: IBuildingObserver)
    + UnregisterBuildingObserver(observer: IBuildingObserver)
    + NotifyImpacts()
    + NotifyInfluence()
    + NotifyProducts()
    + NotifyComposition()
    + NotifyNeeds()
    + NotifyAlls()
}


@enduml
